fix dark mode when system is dark

--- a/src/content/blog/border-radius-tricks/border-styles.css
+++ b/src/content/blog/border-radius-tricks/border-styles.css
@@ -21,9 +21,11 @@
   }
 
   @media (prefers-color-scheme: dark) {
-    .example {
-      --ink: white !important;
-      --example-surface: black !important;
+
+    /* increase specificity */
+    div.example {
+      --ink: white;
+      --example-surface: black;
     }
   }
 
